# smithy-python

./: .coveragerc  .gitignore  .licenserc.yaml  .pre-commit-config.yaml  BUILD  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  Makefile  Notes.md  README.md  ROADMAP.md  coverage.xml  mkdocs.yml  mydata.txt  pants.ci.toml  pants.toml  pylint.toml  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  test.py  tox.ini
.github/: CODEOWNERS  SECURITY.md  dependabot.yml
.github/workflows/: check-license.yml  ci.yml  docs.yml  lint.yml  protocol-test.yml  typecheck.yml  update-gradle-wrapper.yml  zizmor.yml
codegen/: README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
codegen/aws/: README.md
codegen/buildSrc/: build.gradle.kts
codegen/core/: build.gradle.kts
codegen/gradle/: libs.versions.toml
codegen/plugins/: build.gradle.kts
codegen/protocol-test/: build.gradle.kts  smithy-build.json
codegen/smithy-aws-python-codegen/: README.md  build.gradle.kts
codegen/smithy-python-codegen/: README.md  build.gradle.kts
codegen/smithy-python-codegen-test/: README.md  build.gradle.kts  smithy-build.json
codegen/smithy-python-codegen/src/main/resources/software/amazon/smithy/python/codegen/: reserved-class-names.txt  reserved-member-names.txt  setup.cfg
codegen/smithy-python-protocol-test/: README.md  build.gradle.kts  smithy-build.json
codegen/smithy-sdklang-codegen/: build.gradle.kts
codegen/smithy-sdklang-codegen-test/: build.gradle.kts  smithy-build.json
designs/: clients.md  documents.md  event-streams.md  exceptions.md  http-interfaces.md  middleware.md  restjson1-serde.py  retries.md  serialization.md  shapes.md  ssdk.md
docs/designs/: auth.md  event-streams.md  exceptions.md  http-interfaces.md  retries.md  serialization.md  shapes.md
examples/weather/: smithy-build.json
lockfiles/: black  docformatter  flake8  mypy  pylint  pytest
python-packages/aws-event-stream/: BUILD  MANIFEST.in  pyproject.toml
python-packages/aws-event-stream/aws_event_stream/: auth.py  events.py  eventstream.py  exceptions.py  structures.py
python-packages/aws-event-stream/aws_event_stream/_private/: __init__.py  deserializers.py  serializers.py  traits.py
python-packages/aws-event-stream/aws_event_stream/aio/: __init__.py
python-packages/aws-event-stream/tests/unit/: test_events.py  test_eventstream.py
python-packages/aws-event-stream/tests/unit/_private/: __init__.py  test_deserializers.py
python-packages/aws-smithy-python/: BUILD  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
python-packages/aws-smithy-python/aws_smithy_python/: __init__.py  auth.py  exceptions.py  identity.py
python-packages/aws-smithy-python/aws_smithy_python/interfaces/: auth.py  identity.py
python-packages/aws-smithy-python/tests/: BUILD
python-packages/aws-smithy-python/tests/unit/: test_auth.py
python-packages/aws-smithy-python/tests/unit/auth/: test_auth.py
python-packages/smithy-aws-core/: BUILD  MANIFEST.in  README.md  pyproject.toml
python-packages/smithy-core/: BUILD  MANIFEST.in  (+1 more)
python-packages/smithy-event-stream/: BUILD  MANIFEST.in  pyproject.toml  requirements.txt
python-packages/smithy-event-stream/smithy_event_stream/: BUILD
python-packages/smithy-event-stream/smithy_event_stream/aio/: interfaces.py
python-packages/smithy-event-stream/tests/: BUILD
python-packages/smithy-http/: BUILD  MANIFEST.in  pyproject.toml  requirements.txt
python-packages/smithy-http/smithy_http/: BUILD  __init__.py  endpoints.py  restjson.py  utils.py
python-packages/smithy-http/smithy_http/aio/: __init__.py  aiohttp.py  crt.py  restjson.py
python-packages/smithy-http/smithy_http/aio/auth/: apikey.py
python-packages/smithy-http/smithy_http/aio/identity/: apikey.py
python-packages/smithy-http/smithy_http/aio/interfaces/: __init__.py  auth.py
python-packages/smithy-http/smithy_http/interfaces/: __init__.py
python-packages/smithy-http/tests/: BUILD
python-packages/smithy-http/tests/integration/aio/: test_crt.py
python-packages/smithy-http/tests/unit/: test_fields.py  test_schemas.py
python-packages/smithy-http/tests/unit/aio/: conftest.py  test_aiohttp.py  test_crt.py  test_http.py  test_restjson.py
python-packages/smithy-http/tests/unit/aio/auth/: test_apikey.py
python-packages/smithy-python/: BUILD  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
python-packages/smithy-python/smithy_python/: BUILD  __init__.py  async_utils.py  exceptions.py  httputils.py  mediatypes.py  mux.py  protocolutils.py  types.py  utils.py
python-packages/smithy-python/smithy_python/_private/: __init__.py  abnf.py  api_key_auth.py  auth.py  collection.py  identity.py  middleware.py
python-packages/smithy-python/smithy_python/_private/auth/: __init__.py
python-packages/smithy-python/smithy_python/_private/http/: __init__.py  aiohttp_client.py  crt.py
python-packages/smithy-python/smithy_python/_private/identity/: __init__.py
python-packages/smithy-python/smithy_python/_private/retries/: __init__.py
python-packages/smithy-python/smithy_python/_private/rfc3986/: __init__.py  _mixin.py  abnf_regexp.py  api.py  builder.py  exceptions.py  iri.py  misc.py  normalizers.py  parseresult.py  uri.py  validators.py
python-packages/smithy-python/smithy_python/interfaces/: __init__.py  auth.py  blobs.py  http.py  identity.py  interceptor.py  retries.py
python-packages/smithy-python/tests/: BUILD
python-packages/smithy-python/tests/functional/: test_middleware.py
python-packages/smithy-python/tests/integration/: test_http_crt.py
python-packages/smithy-python/tests/integration/http_clients/: conftest.py  test_aiohttp.py  test_http_basics.py  test_http_crt.py
python-packages/smithy-python/tests/unit/: test_api_key_auth.py  test_async_utils.py  test_blobs.py  test_http.py  test_http_fields.py  test_http_utils.py  test_identity.py  test_mux.py  test_protocolutils.py  test_retries.py  test_utils.py
scripts/: pantsw
smithy_python/: mediatypes.py  mux.py
(+273 files in other folders)
