[project]
name = "smithy-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "freezegun>=1.5.1",
]
lint = [
    "ruff>=0.9.7",
]
typing = [
    "pyright>=1.1.400",
]
changelog = [
    "jinja2>=3.1.6"
]

[tool.uv]
required-version = ">=0.7.2"
package = false
default-groups = ["test", "lint", "typing", "changelog"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
smithy_core = { workspace = true }
smithy_http = { workspace = true }
smithy_json = { workspace = true }
smithy_aws_core = { workspace = true }
smithy_aws_event_stream = { workspace = true }
aws_sdk_signers = {workspace = true }
smithy_testing = { workspace = true }

[tool.pyright]
typeCheckingMode = "strict"
enableExperimentalFeatures = true
exclude = ["packages/smithy-testing/src/smithy_testing/clients/*/codegen/**"]

[tool.pytest.ini_options]
asyncio_mode = "auto" # makes pytest run async tests without having to be marked with the @pytest.mark.asyncio decorator
addopts = [ "--import-mode=importlib", "--cov", "--cov-report=term-missing" ]
consider_namespace_packages = true

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# candidates: DTZ, EM, INP, ISC, PERF, SIM118, SIM401, SLOT
# perhaps in the future: N, PYI, TC, TID
# probably not, a lot of work: DOC, D, PL, TRY

select = [ "ASYNC", "C4", "E1", "E4", "E7", "E9", "F", "FURB", "G", "I", "LOG", "PIE", "RUF", "S", "T", "UP" ]
exclude = [
    "packages/smithy-core/src/smithy_core/rfc3986.py",
    "packages/smithy-testing/src/smithy_testing/clients/*/codegen/*"
]

[tool.ruff.lint.isort]
classes = ["URI"]

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["S"]

[tool.ruff.format]
docstring-code-format = true
