[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smithy_event_stream"
version = "0.0.1"
description = "Core event stream library for Smithy defined services in Python."
readme = "README.md"
authors = [{name = "Amazon Web Services"}]
keywords = ["aws", "python", "sdk", "amazon", "smithy", "codegen", "http"]
requires-python = ">=3.12"
license = {text = "Apache License 2.0"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries"
]
dependencies = [
    "smithy_core==0.0.1"
]

[project.urls]
source = "https://github.com/awslabs/smithy-python/tree/develop/python-packages/smithy-event-stream"
changelog = "https://github.com/awslabs/smithy-python/blob/develop/CHANGES.md"

[tool.setuptools]
license-files = ["NOTICE"]
include-package-data = true

[tool.setuptools.packages.find]
exclude=["tests*", "codegen", "designs"]

[tool.isort]
profile = "black"
honor_noqa = true
src_paths = ["smithy_event_stream", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
