[bdist_wheel]
universal = 1

[metadata]
requires_dist =
    # TODO

[flake8]
# We ignore E203, E501 for this project due to black
ignore = E203,E501
[pycodestyle]
# We ignore E203, E501 for this project due to black
ignore = E203,E501

[mypy]
strict = True
warn_unused_configs = True

[mypy-awscrt]
ignore_missing_imports = True

[mypy-pytest]
ignore_missing_imports = True
